--- a/index.html
+++ b/index.html
@@ -45,21 +45,21 @@
 <meta name="robots" content="index, follow">
 
 <!-- Canonical Link -->
-<link rel="canonical" href="https://tutoriol.com/" />
+<link rel="canonical" href="https://www.tutoriol.com/" />
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://tutoriol.com/">
+<meta property="og:url" content="https://www.tutoriol.com/">
 <meta property="og:title" content="Tutoriol – Learn Java, Modding & Creative Tech">
 <meta property="og:description" content="AP Java tutoring, Minecraft modding, and creative tech coaching by Eyad.">
-<meta property="og:image" content="https://tutoriol.com/og-banner.png"> <!-- optional preview image -->
+<meta property="og:image" content="https://www.tutoriol.com/og-banner.png"> <!-- optional preview image -->
 
 <!-- Twitter -->
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:url" content="https://tutoriol.com/">
+<meta name="twitter:url" content="https://www.tutoriol.com/">
 <meta name="twitter:title" content="Tutoriol – Learn Java, Modding & Creative Tech">
 <meta name="twitter:description" content="AP Java tutoring, Minecraft modding, and creative tech coaching by Eyad.">
-<meta name="twitter:image" content="https://tutoriol.com/og-banner.png">
+<meta name="twitter:image" content="https://www.tutoriol.com/og-banner.png">
 
 
 <link rel="icon" href="/favicon.ico" type="image/x-icon">
