added a better about

--- a/index.html
+++ b/index.html
@@ -94,14 +94,16 @@
     <p class="text-lg">From Java to Minecraft Mods, YouTube Videos to Livestreaming—learn by doing, create your future.</p>
     <a href="#contact" class="inline-block mt-6 px-6 py-3 bg-blue-600 text-white rounded hover:bg-blue-700">Book a Session</a>
   </section>
+<!-- About -->
+<section id="about" class="max-w-4xl mx-auto px-4 py-16">
+  <h3 class="text-3xl font-bold mb-4">About Me</h3>
+  <p class="text-lg leading-relaxed">
+    I'm Eyad, a tutor who loves tech, code, and creativity. I specialize in AP Computer Science A, Minecraft modding, and content creation. I teach students how to build, create, and code confidently.
+    <br /><br />
+    I’ve sharpened my teaching and technical skills through my experience with <strong>Kumon</strong> and <strong>iDTech</strong>, where I developed a strong foundation in both tutoring and hands-on tech instruction.
+  </p>
+</section>
 
-  <!-- About -->
-  <section id="about" class="max-w-4xl mx-auto px-4 py-16">
-    <h3 class="text-3xl font-bold mb-4">About Me</h3>
-    <p class="text-lg leading-relaxed">
-      I'm Eyad, a tutor who loves tech, code, and creativity. I specialize in AP Computer Science A, Minecraft modding, and content creation. I teach students how to build, create, and code confidently.
-    </p>
-  </section>
 
   <!-- Programs Section -->
   <section id="programs" class="bg-white dark:bg-gray-800 py-16 px-4">
@@ -152,7 +154,7 @@
       <div class="bg-white dark:bg-gray-700 p-6 rounded-lg shadow hover:shadow-lg transition flex flex-col border-2 border-blue-500">
         <h4 class="text-xl font-semibold mb-2">Monthly Plan</h4>
         <p class="text-4xl font-bold mb-2">$120/month</p>
-        <span class="text-sm font-medium text-green-600 dark:text-green-300 mb-4">🎉 First class free for new students!</span>
+        <!-- <span class="text-sm font-medium text-green-600 dark:text-green-300 mb-4">🎉 First class free for new students!</span> -->
         <ul class="mb-6 space-y-2 text-left">
           <li>✅ 4 Sessions/month</li>
           <li>✅ Covers AP Java, Modding, Video Editing & more</li>
