--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <a href="#about" class="hover:text-blue-600 dark:hover:text-blue-400">About</a>
         <a href="#programs" class="hover:text-blue-600 dark:hover:text-blue-400">Programs</a>
         <a href="#contact" class="hover:text-blue-600 dark:hover:text-blue-400">Contact</a>
-        <a href="#demo" class="hover:text-blue-600 dark:hover:text-blue-400">Live Demo</a>
+        <a href="#pricing" class="hover:text-blue-600 dark:hover:text-blue-400">Pricing</a>
         <button onclick="toggleDarkMode()" class="ml-4 px-3 py-1 bg-gray-200 dark:bg-gray-700 rounded text-sm hover:bg-gray-300 dark:hover:bg-gray-600">
           🌓 Toggle Dark
         </button>
