--- a/index.html
+++ b/index.html
@@ -126,6 +126,11 @@
           <h4 class="text-xl font-semibold mb-2">📺 Livestreaming</h4>
           <p>Set up OBS, stream to YouTube or Twitch, and engage your audience like a pro.</p>
         </div>
+        <div class="bg-gray-100 dark:bg-gray-700 p-6 rounded-lg shadow hover:shadow-lg transition">
+          <h4 class="text-xl font-semibold mb-2">🐧 Linux</h4>
+          <p>Learn to master the terminal, install software, and customize your Linux desktop like a power user.</p>
+        </div>
+        
       </div>
     </div>
   </section>
