--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <!-- Weekly -->
         <div class="bg-white dark:bg-gray-700 p-6 rounded-lg shadow hover:shadow-lg transition flex flex-col">
           <h4 class="text-xl font-semibold mb-2">Weekly Plan</h4>
-          <p class="text-4xl font-bold mb-4">$35 <span class="text-base font-medium">per house/session</span></p>
+          <p class="text-4xl font-bold mb-4">$35 <span class="text-base font-medium">per hour/session</span></p>
           <ul class="mb-6 space-y-2 text-left">
             <li>✅ 1 Full Hour Session</li>
             <li>✅ Multiple Sessions in a Day Available</li>
