--- a/index.html
+++ b/index.html
@@ -47,11 +47,12 @@
   <link rel="canonical" href="https://www.tutoriol.com/" />
 
   <!-- Open Graph -->
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://www.tutoriol.com/">
-  <meta property="og:title" content="Tutoriol – Learn Java, Modding & Creative Tech">
-  <meta property="og:description" content="AP Java tutoring, Minecraft modding, and creative tech coaching by Eyad.">
-  <meta property="og:image" content="https://www.tutoriol.com/og-banner.png">
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.tutoriol.com/" />
+  <meta property="og:title" content="Tutoriol – Learn Java, Modding & Creative Tech" />
+  <meta property="og:description" content="AP Java tutoring, Minecraft modding, and creative tech coaching by Eyad." />
+  <meta property="og:image" content="https://www.tutoriol.com/og-banner.png" />
+  
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
