--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <meta property="og:url" content="https://www.tutoriol.com/" />
   <meta property="og:title" content="Tutoriol – Learn Java, Modding & Creative Tech" />
   <meta property="og:description" content="AP Java tutoring, Minecraft modding, and creative tech coaching by Eyad." />
-  <meta property="og:image" content="https://www.tutoriol.com/og-banner.png" />
+  <meta property="og:image" content="https://tutoriol.com/og-banner.png" />
   
 
   <!-- Twitter -->
@@ -59,7 +59,7 @@
   <meta name="twitter:url" content="https://www.tutoriol.com/">
   <meta name="twitter:title" content="Tutoriol – Learn Java, Modding & Creative Tech">
   <meta name="twitter:description" content="AP Java tutoring, Minecraft modding, and creative tech coaching by Eyad.">
-  <meta name="twitter:image" content="https://www.tutoriol.com/og-banner.png">
+  <meta name="twitter:image" content="https://tutoriol.com/og-banner.png">
 
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <meta name="theme-color" content="#1E3A8A" />
